@@ -1,3 +1,8 @@
+pyqtgraph 0.11 [unreleased]
+
+   New Features:
+    - add an autoscale feature for AxisItem
+
 pyqtgraph-0.9.11  [unreleased]
 
   Bugfixes:
